# n2c

./: README.md
n2c/: README.md  n2c  pyproject.toml
n2c/src/n2c/: crew.py  main.py
n2c/src/n2c/config/: agents.yaml  tasks.yaml
