[project]
name = "n2c"
version = "0.1.0"
description = "N2C using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
n2c = "n2c.main:run"
run_crew = "n2c.main:run"
train = "n2c.main:train"
replay = "n2c.main:replay"
test = "n2c.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
